ft. recieve name from Profile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="sidebar-top">
                 <img src="Images/Gradient-image.jpg" alt="">
                 <i class="material-icons sidebar-top-avatar">account_circle</i>
-                <h2>Amaan Majeed</h2>
+                <h2 id="name">Amaan Majeed</h2>
                 <h4>amaanmajeed123@gmail.com</h4>
             </div>
             <div class="sidebar-stats">
